--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<cucumber.version>1.2.5</cucumber.version>
+		<guice.version>4.1.0</guice.version>
 	</properties>
 
 
@@ -48,6 +50,15 @@
 					</configuration>
 				</plugin>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<excludes>
+							<exclude>**/CucumberITest.java</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
+				<plugin>
 				    <groupId>org.eluder.coveralls</groupId>
 				    <artifactId>coveralls-maven-plugin</artifactId>
 				    <version>${coveralls-maven-plugin.version}</version>
@@ -64,6 +75,12 @@
 				<version>${maven-failsafe-plugin.version}</version>
 				<configuration>
 					<argLine>${failsafeArgLine}</argLine>
+					<systemPropertyVariables>
+						<guice.injector-source>com.simplyti.cloud.kube.client.CustomInjectorSource</guice.injector-source>
+					</systemPropertyVariables>
+					<includes>
+						<include>**/CucumberITest.java</include>
+					</includes>
 				</configuration>
 				<executions>
 					<execution>
@@ -233,6 +250,24 @@
 			<groupId>com.jayway.awaitility</groupId>
 			<artifactId>awaitility</artifactId>
 			<version>1.7.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-guice</artifactId>
+			<version>${cucumber.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>${cucumber.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>${guice.version}</version>
 			<scope>test</scope>
 		</dependency>
 
