--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<cucumber.version>1.2.5</cucumber.version>
 		<guice.version>4.1.0</guice.version>
+		<commons-io.version>2.4</commons-io.version>
 	</properties>
 
 
@@ -269,6 +270,12 @@
 			<artifactId>guice</artifactId>
 			<version>${guice.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>${commons-io.version}</version>
+		    <scope>test</scope>
 		</dependency>
 
 	</dependencies>
