--- a/pom.xml
+++ b/pom.xml
@@ -281,10 +281,15 @@
 	</dependencies>
 
 	<distributionManagement>
+		<repository>
+	      <id>sonatype-nexus-staging</id>
+	      <name>Nexus Release Repository</name>
+	      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+	    </repository>
 		<snapshotRepository>
 			<id>sonatype-nexus-snapshots</id>
 			<name>Sonatype Nexus Snapshots</name>
-			<url>${sonatypeOssDistMgmtSnapshotsUrl}</url>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
