--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
 		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+		<maven-help-plugin.version>2.2</maven-help-plugin.version>
 
 		<lombok.version>1.16.16</lombok.version>
 		<netty.version>4.1.11.Final</netty.version>
@@ -66,6 +67,11 @@
 				    <configuration>
 				        <repoToken>${coveralls.token}</repoToken>
 				    </configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-help-plugin</artifactId>
+				    <version>${maven-help-plugin.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
