--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
 		<maven-help-plugin.version>2.2</maven-help-plugin.version>
 		<versions-maven-plugin.version>2.4</versions-maven-plugin.version>
+		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
 
 		<lombok.version>1.16.16</lombok.version>
 		<netty.version>4.1.11.Final</netty.version>
@@ -28,6 +29,7 @@
 
 		<junit.version>4.12</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<awaitility.version>1.7.0</awaitility.version>
 		<cucumber.version>1.2.5</cucumber.version>
 		<guice.version>4.1.0</guice.version>
 		<commons-io.version>2.4</commons-io.version>
@@ -182,6 +184,19 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven-source-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
@@ -262,7 +277,7 @@
 		<dependency>
 			<groupId>com.jayway.awaitility</groupId>
 			<artifactId>awaitility</artifactId>
-			<version>1.7.0</version>
+			<version>${awaitility.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
