--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,10 @@
 		<maven-javadoc-plugin.version>3.0.0-M1</maven-javadoc-plugin.version>
 		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 
-		<lombok.version>1.16.18</lombok.version>
+		<lombok.version>1.16.20</lombok.version>
 		<netty.version>4.1.22.Final</netty.version>
-		<jsoniter.version>0.9.21</jsoniter.version>
+		<jsoniter.version>0.9.22</jsoniter.version>
+		<vavr.version>0.9.2</vavr.version>
 		<guava.version>24.0-jre</guava.version>
 
 		<log4j.version>2.10.0</log4j.version>
@@ -57,8 +58,8 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<awaitility.version>1.7.0</awaitility.version>
 		<cucumber.version>1.2.5</cucumber.version>
-		<guice.version>4.1.0</guice.version>
-		<commons-io.version>2.5</commons-io.version>
+		<guice.version>4.2.0</guice.version>
+		<commons-io.version>2.6</commons-io.version>
 	</properties>
 
 
@@ -252,6 +253,11 @@
 			<artifactId>netty-codec-http</artifactId>
 			<version>${netty.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-native-epoll</artifactId>
+			<version>${netty.version}</version>
+		</dependency>
 
 		<!-- JSON -->
 		<dependency>
@@ -261,6 +267,11 @@
 		</dependency>
 
 		<!-- Guava -->
+		<dependency>
+			<groupId>io.vavr</groupId>
+			<artifactId>vavr</artifactId>
+			<version>${vavr.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
