--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 
 		<lombok.version>1.16.20</lombok.version>
-		<netty.version>4.1.22.Final</netty.version>
+		<netty.version>4.1.27.Final</netty.version>
 		<jsoniter.version>0.9.22</jsoniter.version>
 		<vavr.version>0.9.2</vavr.version>
 		<guava.version>24.1-jre</guava.version>
@@ -260,6 +260,13 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-transport-native-epoll</artifactId>
 			<version>${netty.version}</version>
+			<classifier>linux-x86_64</classifier>
+		</dependency>
+		<dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-transport-native-kqueue</artifactId>
+		    <version>${netty.version}</version>
+		    <classifier>osx-x86_64</classifier>
 		</dependency>
 
 		<!-- JSON -->
